Fix alignment bug and refactor Entry component

--- a/client/src/components/Entry/entry.css
+++ b/client/src/components/Entry/entry.css
@@ -1,5 +1,6 @@
 .entry {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 40px;
@@ -14,9 +15,9 @@
   justify-content: flex-start;
   align-items: center;
 
-  width: 20%;
+  min-width: 20%;
   max-width: 100px;
-  margin-right: 5%;
+  margin: 0 2%;
 
   box-sizing: border-box;
 }
@@ -25,9 +26,9 @@
   display: flex;
   align-items: center;
 
-  max-width: 60px;
+  min-width: 0;
   height: 20px;
-  padding: 8px 20px;
+  padding: 6px 20px;
   border-radius: 20px;
 
   background-color: #CBE6FF;
@@ -41,49 +42,51 @@
 }
 
 .entry-definition {
-  width: 60%;
-  margin-right: 5%;
+  min-width: 50%;
+  margin: 0 2%;
 
-  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 
-.entry-parts-of-speech {
+.entry-lexeme {
   display: flex;
-  width: 20%;
+  min-width: 20%;
   height: 100%;
+  margin: 0 2%;
+
+  overflow: hidden;
 }
 
-.entry-parts-of-speech-icon {
+.entry-lexeme-icon {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 36px;
-  height: 36px;
-  min-width: 36px;
-  min-height: 36px;
+  width: 32px;
+  height: 32px;
+  min-width: 32px;
+  min-height: 32px;
 
   margin: 0 3px 0 0;
   border-radius: 40px;
   box-sizing: border-box;
 }
 
-.pos-text-blue { color: #00A5E0; }
-.pos-text-green { color: #2B976D; }
-.pos-text-yellow { color: #80B134; }
-.pos-text-orange { color: #E65D00; }
-.pos-text-red { color: #DB0A00; }
-.pos-text-dark-red { color: #BD000D; }
-.pos-text-grey { color: #4F4F4F; }
+.lexeme-text-blue { color: #00A5E0; }
+.lexeme-text-green { color: #2B976D; }
+.lexeme-text-yellow { color: #80B134; }
+.lexeme-text-orange { color: #E65D00; }
+.lexeme-text-red { color: #DB0A00; }
+.lexeme-text-dark-red { color: #BD000D; }
+.lexeme-text-grey { color: #4F4F4F; }
 
-.pos-background-blue { background-color: #AFEAFF; }
-.pos-background-green { background-color: #A8E6CE; }
-.pos-background-yellow { background-color: #DCEDC2; }
-.pos-background-orange { background-color: #FFD3B5; }
-.pos-background-red { background-color: #FFAAA6; }
-.pos-background-dark-red { background-color: #FF8C94; }
-.pos-background-grey { background-color: #CFCFCF; }
+.lexeme-background-blue { background-color: #AFEAFF; }
+.lexeme-background-green { background-color: #A8E6CE; }
+.lexeme-background-yellow { background-color: #DCEDC2; }
+.lexeme-background-orange { background-color: #FFD3B5; }
+.lexeme-background-red { background-color: #FFAAA6; }
+.lexeme-background-dark-red { background-color: #FF8C94; }
+.lexeme-background-grey { background-color: #CFCFCF; }
 
 
 @media only screen and (max-width: 1279.5px) {
